...
    private func checkForWinOrLose() {
        let currentGuessChars = guesses[currentRow - 1].compactMap { $0 }
        let guessString = String(currentGuessChars)
        
        // Win?
        if guessString.lowercased() == answer.lowercased() {
            showAlert(title: "Congratulations!",
                      message: "You guessed the word \(answer.uppercased())")
            newGameButton.isHidden = false
        }
        // Lose?
        else if currentRow == 6 {
            showAlert(title: "Game Over",
...
    }
}

// Keyboard Delegate
extension ViewController: KeyboardViewControllerDelegate {
    func keyboardViewController(_ vc: KeyboardViewController, didTapKey key: String) {
        if key == "ENT" {
            handleEnterPressed()
        }
        else if key == "DEL"{
            handleDelPressed()
        }
        else {
...
